examples/test/testpolicy7079.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7079
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key42: value32
      key3: value4
      key19: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value9
      podSelector:
        matchLabels:
          key24: value15
          key1: value2
